--- a/style.css
+++ b/style.css
@@ -52,5 +52,9 @@ h1{
     height: 200px;
     object-fit: cover;
     margin-bottom: 10px;
+    transition: all .3s ease;
+    overflow: hidden;
 
 }
+
+
